syntax = "proto3";

package jiaa.core;

option java_multiple_files = true;
option java_package = "com.jiaa.common.core";
option go_package = "jiaa-server-core/pkg/proto";

service CoreService {
  // 1. 클라이언트(OS/Vision) 연결: 센서 정보 주고 <-> 명령 받고 (양방향)
  rpc SyncClient(stream ClientHeartbeat) returns (stream ServerCommand);

  // 2. AI 분석 결과 보고 (윤성 -> 승민)
  rpc ReportAnalysisResult(AnalysisReport) returns (Ack);

  // 3. 실행 중인 앱 목록 전송 (변경 시에만)
  rpc SendAppList(AppListRequest) returns (AppListResponse);

  // 4. 음성 스트리밍 -> STT 변환
  rpc TranscribeAudio(stream AudioRequest) returns (AudioResponse);
}

// --- 클라이언트 -> 서버 (1초마다 전송) ---
message ClientHeartbeat {
  string client_id = 1;       // "pc-01", "cam-01"
  
  // OS 활동 통계 (Dev 1용)
  int32 mouse_distance = 2;   // 1초간 이동 거리 합
  int32 click_count = 3;      // 1초간 클릭 수
  int32 keystroke_count = 4;  // 1초간 키 입력 수
  bool is_os_idle = 5;        // OS 유휴 상태 여부

  // 비전 데이터 (Dev 2용)
  bool is_eyes_closed = 6;    // 눈 감음 여부
  float concentration_score = 7; // 비전 모델이 판단한 집중도
  float keyboard_entropy = 8;    // 키보드 엔트로피 (0.0 ~ 5.0)
  string active_window_title = 9; // 활성 창 제목
  bool is_dragging = 10;          // 마우스 드래그 여부
  double avg_dwell_time = 11;     // 평균 키 누름 시간 (ms)
}

// --- 서버 -> 클라이언트 (명령) ---
message ServerCommand {
  enum CommandType {
    NONE = 0;
    SHAKE_MOUSE = 1;    // 졸음 깨우기 (물리)
    BLOCK_SCREEN = 2;   // 화면 가리기 (딴짓)
    SHOW_MESSAGE = 3;   // 경고 메시지/RAG 결과 띄우기
    PLAY_SOUND = 4;     // TTS 읽기
  }
  CommandType type = 1;
  string payload = 2;   // 메시지 내용이나 추가 정보
}

// --- AI 결과 보고 ---
message AnalysisReport {
  string type = 1;      // "EMERGENCY", "URL_BLOCK"
  string content = 2;   // 상세 내용
}

message Ack {
  bool success = 1;
}

// ==================== App List ====================

message AppListRequest {
  string apps_json = 1;       // 실행 중인 앱 목록 JSON (["Chrome", "VS Code", ...])
  int64 timestamp = 2;        // 전송 시간
}

message AppListResponse {
  bool success = 1;           // 수신 성공 여부
  string message = 2;         // 응답 메시지
  string command = 3;         // 명령 (e.g. "KILL")
  string target_app = 4;      // 대상 앱 (e.g. "Minecraft")
}

// ==================== Audio ====================

message AudioRequest {
  bytes audio_data = 1;       // VAD로 걸러진 음성 바이너리
  bool is_final = 2;          // True = "문장 끝났음(침묵 1초 감지)"
  int64 timestamp = 3;        // 로깅용 시간
  string media_info_json = 4; // 미디어 정보 JSON
  
  string process_info = 10;   // (추가) 현재 활성 프로세스 정보 (JSON)
  string windows = 11;        // (추가) 열린 창 목록 정보 (JSON)
}

message AudioResponse {
  string transcript = 1;      // 변환된 텍스트
  bool is_emergency = 2;      // 위급 상황 여부
  string intent = 3;          // 의도 분석 결과
}
